Fixing some alignments

--- a/src/shared/buttons.css
+++ b/src/shared/buttons.css
@@ -67,6 +67,7 @@ button.round {
 
 .btn.circle,
 button.circle {
+  display: inline-block;
   width: 48px;
   height: 48px;
   padding: 0;
